# study-log

./: .gitignore  README.md  celerybeat-schedule.dir  db.sqlite3  pyproject.toml
Celery/: .python-version  READEME.md  README.md
Celery/celery-prac/: README.md  pyproject.toml
Celery/celery-prac/src/: README.md  celery.py  tasks.py
Flutter/toonflix/: pubspec.yaml
Mock-Object/: README.md
NextJS/: .gitignore  package-lock.json  package.json
NextJS/app/: layout.tsx  not-found.tsx  page.tsx
NextJS/components/: movie-info.tsx  movie-videos.tsx  movie.tsx  navigation.tsx
NextJS/styles/: global.css  movie.module.css
Poetry/: .python-version  README.md
Poetry/poetry-demo/: pyproject.toml
Python-design-pattern/command/: command.py
Python-design-pattern/compound/: MVC1.py
Python-design-pattern/factory/: abstract_factory.py  factory..py  simple_factory.py
Python-design-pattern/proxy/: proxy.py
Python-design-pattern/singleton/: monostate_singleton.py  singleton.py
Python-design-pattern/state/: state1.py  state2.py
RabbitMQ/: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
RabbitMQ/consumer/: main.py
RabbitMQ/producer/: main.py
Ruff/: README.md
Ruff/ruff-prac/: pyproject.toml
Ruff/ruff-prac/src/: fix_safety.py
Terraform/: .python-version  README.md  pyproject.toml
api/: tasks.py  urls.py  views.py
async-python/: README.md
config/: celery.py  settings.py  urls.py
momentum/: index.html
momentum/js/: clock.js  (+2 more)
python_design_pattern/: ruff.toml
stateful/: pubspec.yaml
toggle/: app.js  index.html
uv/: README.md
(+57 files in other folders)
