[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# `poetry new poetr_demo` 이후 tool.poetry.packages는 내가 추가
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = ">=2.1.0 <3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
