[tool.poetry]
name = "ruff-prac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ruff_prac", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.ruff.lint]
select = ["RUF015"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

